--- a/features/bmi/src/main/res/values/strings.xml
+++ b/features/bmi/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
 
     <string name="height">신장</string>
     <string name="weight">체중</string>
-    <string name="check">확인하기</string>
+    <string name="confirm">확인하기</string>
+    <string name="bmiTitle">BMI : </string>
+    <string name="resultTitle">결과는 : </string>
 
 </resources>
