Feat : MainActivity에서 각 Feature Activity로 이동하도록 수정(UI 없음)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AndroidStandardLevel</string>
+    <string name="title_pomodoro">pomodoro</string>
 </resources>
