Feat : Recorder Module 생성 및 Gradle, Base 초기 설정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">AndroidStandardLevel</string>
     <string name="title_pomodoro">pomodoro</string>
+    <string name="title_recorder">Recorder</string>
 </resources>
