Feat : initial WebViewer Module created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AndroidStandardLevel</string>
     <string name="title_pomodoro">pomodoro</string>
     <string name="title_recorder">Recorder</string>
+    <string name="title_webviewer">WebViewer</string>
 </resources>
