Feat : Initialize Notification Feature Module
Signed-off-by: Terry <choir0118@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_pomodoro">pomodoro</string>
     <string name="title_recorder">Recorder</string>
     <string name="title_webviewer">WebViewer</string>
+    <string name="title_notification">Notification</string>
 </resources>
