--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_recorder">Recorder</string>
     <string name="title_webviewer">WebViewer</string>
     <string name="title_notification">Notification</string>
+    <string name="title_remoteconfig">RemoteConfig</string>
 </resources>
