--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_webviewer">WebViewer</string>
     <string name="title_notification">Notification</string>
     <string name="title_remoteconfig">RemoteConfig</string>
+    <string name="title_alram">Alram</string>
 </resources>
