--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_notification">Notification</string>
     <string name="title_remoteconfig">RemoteConfig</string>
     <string name="title_alram">Alram</string>
+    <string name="title_books">Books</string>
 </resources>
