--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_remoteconfig">RemoteConfig</string>
     <string name="title_alram">Alram</string>
     <string name="title_books">Books</string>
+    <string name="title_tinder">Tinder</string>
 </resources>
