--- a/features/Transaction/src/main/res/values/strings.xml
+++ b/features/Transaction/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="chat_list">채팅</string>
     <string name="my_info">나의 정보</string>
     <string name="article_transaction">중고 거래</string>
+    <string name="register_content">글 등록</string>
+    <string name="price">가격</string>
+    <string name="content_title">글 제목</string>
+    <string name="register_image">이미지 등록하기</string>
+    <string name="register">등록하기</string>
 </resources>
