Feat : 기본 기능 완료(고도화 TODO 리스트로 메모)
Signed-off-by: Terry <choir0118@gmail.com>

--- a/features/Transaction/src/main/res/values/strings.xml
+++ b/features/Transaction/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="content_title">글 제목</string>
     <string name="register_image">이미지 등록하기</string>
     <string name="register">등록하기</string>
+    <string name="chat_room_list">채팅방 목록</string>
+    <string name="send">전송</string>
 </resources>
