Feat : Initialize VideoPlayer Module
Signed-off-by: Terry <choir0118@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_tinder">Tinder</string>
     <string name="title_transaction">Transaction</string>
     <string name="title_airbnb">Airbnb</string>
+    <string name="title_videoplayer">VideoPlayer</string>
 </resources>
