--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_transaction">Transaction</string>
     <string name="title_airbnb">Airbnb</string>
     <string name="title_videoplayer">VideoPlayer</string>
+    <string name="title_audioplayer">AudioPlayer</string>
 </resources>
