Feat : Initialize `Github Repo` Module
Signed-off-by: Terry <choir0118@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_architecture">Architecture</string>
     <string name="title_weeklystudy">WeeklyStudy</string>
     <string name="title_motionintro">MotionIntro</string>
+    <string name="title_githubrepo">Github Repo</string>
 </resources>
